<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView_addMeeting"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name_hint"
            android:padding="6dp"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_outline_task_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_project"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/project_txt_field_hint"
            android:padding="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField_taskName"
            app:startIconDrawable="@drawable/ic_outline_folder_24">

        <AutoCompleteTextView
            android:id="@+id/project_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addBtn"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/add_btn_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField_project" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>