<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filterButton"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/filterByName"
                android:title="@string/filterByName" />
            <item
                android:id="@+id/filterByDate"
                android:title="@string/filterByDate" />
        </menu>
    </item>
</menu>