<resources>
    <string name="app_name">Todoc</string>

    <string name="label_action_filter">Filter</string>

    <string name="sort_alphabetical">A -&gt; Z</string>
    <string name="sort_alphabetical_invert">Z -&gt; A</string>
    <string name="sort_oldest_first">Les plus anciens d’abord</string>
    <string name="sort_recent_first">Les plus récents d’abord</string>

    <string name="add_task">Ajouter une tâche</string>
    <string name="add">Ajouter</string>

    <string name="no_task">Tu n’as aucune tâche à traiter</string>

    <string name="task_name_hint">Nom de la tâche</string>

    <string name="empty_task_name">Le nom de la tâche doit être renseigné</string>
    <string name="add_btn_txt">AJOUTER</string>
    <string name="project_txt_field_hint">Projet</string>

    <!--Add task error messages-->
    <string name="taskError">Please add a project name</string>
    <string name="projectError">Please add a project name</string>

    <!--Menu text-->
    <string name="filterByName">Filtrer par nom</string>
    <string name="filterByDate">Filtrer par date</string>
</resources>